--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -348,7 +348,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Tables</h1>
+                    <h1 class="page-header">Board Register</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -357,32 +357,29 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Board List
+                            Board Register
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Bno</th>
-                                        <th>Title</th>
-                                        <th>Writer</th>
-                                        <th>Register</th>
-                                        <th>Update</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                        <tr th:each="board:${list}">
-                                            <td th:text="${board.bno}"></td>
-                                            <td th:text="${board.title}"></td>
-                                            <td th:text="${board.writer}"></td>
-                                            <td th:text="${board.createDate}"></td>
-                                            <td th:text="${board.modifiedDate}"></td>
-                                        </tr>
 
-                                </tbody>
-                            </table>
-                            <!-- /.table-responsive -->
+                            <form role="form" action="/board/register" method="post">
+                                <div class="form-group">
+                                    <label>Title</label> <input class="form-control" name='title'>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Text area</label>
+                                    <textarea class="form-control" rows="3" name='content'></textarea>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Writer</label> <input class="form-control" name='writer'>
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit
+                                    Button</button>
+                                <button type="reset" class="btn btn-default">Reset Button</button>
+                            </form>
+
                         </div>
                         <!-- /.panel-body -->
                     </div>
