--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -6,6 +6,7 @@
 <head>
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
+
 </head>
 
 <body>
@@ -376,13 +377,35 @@
                                             <td th:text="${board.bno}"></td>
                                             <td th:text="${board.title}"></td>
                                             <td th:text="${board.writer}"></td>
-                                            <td th:text="${board.createDate}"></td>
-                                            <td th:text="${board.modifiedDate}"></td>
+                                            <td th:text="${#temporals.format(board.createDate, 'yy-MM-dd')}"></td>
+                                            <td th:text="${#temporals.format(board.modifiedDate, 'yy-MM-dd')}"></td>
                                         </tr>
 
                                 </tbody>
                             </table>
                             <!-- /.table-responsive -->
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            처리가 완료되었습니다.
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                    <!-- /.modal-content -->
+                                </div>
+                                <!-- /.modal-dialog -->
+                            </div>
+                            <!-- /.modal -->
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -393,9 +416,36 @@
             <!-- /.row -->
         </div>
         <!-- /#page-wrapper -->
-
     </div>
     <!-- /#wrapper -->
+    <script th:inline="javascript">
+        /* <![CDATA[ */
+        $(document).ready(function (){
+
+            var result = /*[[${result}]]*/;
+
+            checkModal(result);
+
+            function checkModal(result) {
+
+                if (result === '') {
+                    return;
+                }
+
+                if (parseInt(result) > 0) {
+                    $(".modal-body").html("게시글 " + parseInt(result) + " 번이 등록되었습니다.");
+                }
+
+                $("#myModal").modal("show");
+            }
+        });
+        /* ]]> */
+    </script>
 </th:block>
 </body>
+
+
+
+
+
 </html>
