--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -6,7 +6,6 @@
 <head>
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
-
 </head>
 
 <body>
@@ -349,7 +348,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Tables</h1>
+                    <h1 class="page-header">Board Read</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -358,57 +357,31 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Board List
-                            <button id='regBtn' type="button" class="btn btn-xs pull-right">Register New Board</button>
+                            Board Read
                         </div>
-
                         <!-- /.panel-heading -->
-
                         <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Bno</th>
-                                        <th>Title</th>
-                                        <th>Writer</th>
-                                        <th>Register</th>
-                                        <th>Update</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                        <tr th:each="board:${list}">
-                                            <td th:text="${board.bno}"></td>
-                                            <td th:text="${board.title}"></td>
-                                            <td th:text="${board.writer}"></td>
-                                            <td th:text="${#temporals.format(board.createDate, 'yy-MM-dd')}"></td>
-                                            <td th:text="${#temporals.format(board.modifiedDate, 'yy-MM-dd')}"></td>
-                                        </tr>
 
-                                </tbody>
-                            </table>
-                            <!-- /.table-responsive -->
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            처리가 완료되었습니다.
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
-                                    </div>
-                                    <!-- /.modal-content -->
+                                <div class="form-group">
+                                    <label>Bno</label> <input class="form-control" name='bno' th:value="${board.bno}" readonly="readonly">
                                 </div>
-                                <!-- /.modal-dialog -->
-                            </div>
-                            <!-- /.modal -->
+
+                                <div class="form-group">
+                                    <label>Title</label> <input class="form-control" name='title'>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Text area</label>
+                                    <textarea class="form-control" rows="3" name='content'></textarea>
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Writer</label> <input class="form-control" name='writer'>
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit
+                                    Button</button>
+                                <button type="reset" class="btn btn-default">Reset Button</button>
+
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -419,45 +392,9 @@
             <!-- /.row -->
         </div>
         <!-- /#page-wrapper -->
+
     </div>
     <!-- /#wrapper -->
-    <script th:inline="javascript">
-        /* <![CDATA[ */
-        $(document).ready(function (){
-
-            var result = /*[[${result}]]*/;
-
-            checkModal(result);
-
-            function checkModal(result) {
-
-                if (result == null) {
-                    return;
-                }
-
-                if (parseInt(result) > 0) {
-                    $(".modal-body").html("게시글 " + parseInt(result) + " 번이 등록되었습니다.");
-                }
-
-                $("#myModal").modal("show");
-            }
-
-
-
-        });
-        $("#regBtn").on("click", function (){
-
-            self.location="/board/register";
-
-        });
-
-        /* ]]> */
-    </script>
 </th:block>
 </body>
-
-
-
-
-
 </html>
