--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -367,20 +367,19 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label>Title</label> <input class="form-control" name='title'>
+                                    <label>Title</label> <input class="form-control" name='title' th:value="${board.title}" readonly="readonly">
                                 </div>
 
                                 <div class="form-group">
                                     <label>Text area</label>
-                                    <textarea class="form-control" rows="3" name='content'></textarea>
+                                    <textarea class="form-control" rows="3" name='content' th:text="${board.content}" readonly="readonly"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <label>Writer</label> <input class="form-control" name='writer'>
+                                    <label>Writer</label> <input class="form-control" name='writer' th:value="${board.writer}" readonly="readonly">
                                 </div>
-                                <button type="submit" class="btn btn-default">Submit
-                                    Button</button>
-                                <button type="reset" class="btn btn-default">Reset Button</button>
+                                <button type="modify" class="btn btn-default" th:onclick="'location.href=\'/board/modify?bno='+${board.bno}+'\''">Modify</button>
+                                <button type="list" class="btn btn-info" onclick="location.href='/board/list'">List</button>
 
                         </div>
                         <!-- /.panel-body -->
