--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -378,7 +378,7 @@
                                 <tbody>
                                         <tr th:each="board:${list}">
                                             <td th:text="${board.bno}"></td>
-                                            <td th:text="${board.title}"></td>
+                                            <td><a th:href="@{/board/get(bno=${board.bno})}" th:text="${board.title}"></a></td>
                                             <td th:text="${board.writer}"></td>
                                             <td th:text="${#temporals.format(board.createDate, 'yy-MM-dd')}"></td>
                                             <td th:text="${#temporals.format(board.modifiedDate, 'yy-MM-dd')}"></td>
