--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -6,7 +6,6 @@
 <head>
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
-
 </head>
 
 <body>
@@ -349,7 +348,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Tables</h1>
+                    <h1 class="page-header">Board Modify</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -358,57 +357,39 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Board List
-                            <button id='regBtn' type="button" class="btn btn-xs pull-right">Register New Board</button>
+                            Board Modify
                         </div>
-
                         <!-- /.panel-heading -->
-
                         <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Bno</th>
-                                        <th>Title</th>
-                                        <th>Writer</th>
-                                        <th>Register</th>
-                                        <th>Update</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                        <tr th:each="board:${list}">
-                                            <td th:text="${board.bno}"></td>
-                                            <td><a th:href="@{/board/get(bno=${board.bno})}" th:text="${board.title}"></a></td>
-                                            <td th:text="${board.writer}"></td>
-                                            <td th:text="${#temporals.format(board.createDate, 'yy-MM-dd')}"></td>
-                                            <td th:text="${#temporals.format(board.modifiedDate, 'yy-MM-dd')}"></td>
-                                        </tr>
-
-                                </tbody>
-                            </table>
-                            <!-- /.table-responsive -->
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            처리가 완료되었습니다.
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
-                                    </div>
-                                    <!-- /.modal-content -->
-                                </div>
-                                <!-- /.modal-dialog -->
+                            <form role="form" action="/board/modify" method="post">
+                            <div class="form-group">
+                                <label>Bno</label> <input class="form-control" name='bno' th:value="${board.bno}" readonly="readonly">
                             </div>
-                            <!-- /.modal -->
+
+                            <div class="form-group">
+                                <label>Title</label> <input class="form-control" name='title' th:value="${board.title}">
+                            </div>
+
+                            <div class="form-group">
+                                <label>Text area</label>
+                                <textarea class="form-control" rows="3" name='content' th:text="${board.content}" ></textarea>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Writer</label> <input class="form-control" name='writer' th:value="${board.writer}">
+                            </div>
+
+                                <div class="form-group">
+                                    <label>RegDate</label> <input class="form-control" name='createDate' th:value="${board.createDate}" readonly="readonly">
+                                </div>
+
+                                <div class="form-group">
+                                    <label>UpdateDate</label> <input class="form-control" name='modifiedData' th:value="${board.modifiedDate}" readonly="readonly">
+                                </div>
+                            <button data-oper="modify" class="btn btn-default" th:onclick="'location.href=\'/board/modify?bno='+${board.bno}+'\''">Modify</button>
+                            <button data-oper="remove" class="btn btn-danger">Remove</button>
+                                <button data-oper="list" class="btn btn-info" onclick="location.href='/board/list'">List</button>
+                            </form>
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -419,47 +400,35 @@
             <!-- /.row -->
         </div>
         <!-- /#page-wrapper -->
+
     </div>
     <!-- /#wrapper -->
     <script th:inline="javascript">
         /* <![CDATA[ */
         $(document).ready(function (){
 
-            var result = /*[[${result}]]*/;
+            var formObj = $("form");
 
-            checkModal(result);
+            $('button').on("click", function(e){
 
-            history.replaceState({},null,null);
+                e.preventDefault();
 
-            function checkModal(result) {
+                var operation = $(this).data("oper");
+                console.log(operation);
 
-                if (result == null || history.state) {
-                    return;
+                if(operation=='remove'){
+                    formObj.attr("action","/board/remove");
+                } else if (operation == 'list'){
+                    formObj.attr("action", "/board/list").submit("method","get");
+                    formObj.empty();
                 }
 
-                if (parseInt(result) > 0) {
-                    $(".modal-body").html("게시글 " + parseInt(result) + " 번이 등록되었습니다.");
-                }
-
-                $("#myModal").modal("show");
-            }
-
-
-
-        });
-        $("#regBtn").on("click", function (){
-
-            self.location="/board/register";
-
+                formObj.submit();
+            });
         });
 
         /* ]]> */
     </script>
 </th:block>
 </body>
-
-
-
-
-
 </html>
