--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -365,7 +365,7 @@
                         <!-- /.panel-heading -->
 
                         <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <table width="100%" class="table table-striped table-bordered table-hover">
                                 <thead>
                                     <tr>
                                         <th>Bno</th>
@@ -387,6 +387,21 @@
                                 </tbody>
                             </table>
                             <!-- /.table-responsive -->
+                            <div class='pull-right'>
+                                <ul class="pagination">
+
+                                    <li th:if="${pageMaker.prev }" class="paginate_button previous"><a th:href="${pageMaker.startPage -1}">Previous</a></li>
+                                    <li th:each="num : ${#numbers.sequence(pageMaker.startPage, pageMaker.endPage)}" class="paginate_button" th:classappend="${pageMaker.cri.pageNum==num ? 'active':'' }" ><a th:text="${num }" th:href="${num}"></a></li>
+                                    <li th:if="${pageMaker.next }" class="paginate_button next"><a th:href="${pageMaker.endPage +1}">Next</a></li>
+
+                                </ul>
+                            </div>
+
+                            <form id="actionForm" action="/board/list" method="get">
+                                <input type="hidden" name="pageNum" th:value="${pageMaker.cri.pageNum}">
+                                <input type="hidden" name="amount" th:value="${pageMaker.cri.amount}">
+                            </form>
+
 
                             <!-- Modal -->
                             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -445,13 +460,30 @@
             }
 
 
+            $("#regBtn").on("click", function (){
+
+                self.location="/board/register";
+
+            });
+
+
+            var actionForm = $("#actionForm");
+
+            $(".paginate_button a").on("click", function(e){
+                e.preventDefault();
+
+                console.log("click");
+
+                actionForm.find("input[name='pageNum']").val($(this).attr("href"));
+
+                actionForm.submit();
+
+            });
+
+
 
         });
-        $("#regBtn").on("click", function (){
 
-            self.location="/board/register";
-
-        });
 
         /* ]]> */
     </script>
