--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -383,6 +383,8 @@
 
                             <form id="openForm" action="/board/modify" method="get">
                                 <input type="hidden" id="bno" name="bno" th:value="${board.bno}">
+                                <input type="hidden" name="pageNum" th:value="${cri.pageNum}">
+                                <input type="hidden" name="amount" th:value="${cri.amount}">
                             </form>
 
                         </div>
