--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -362,6 +362,9 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <form role="form" action="/board/modify" method="post">
+                                <input type="hidden" name="pageNum" th:value="${cri.pageNum}">
+                                <input type="hidden" name="amount" th:value="${cri.amount}">
+
                             <div class="form-group">
                                 <label>Bno</label> <input class="form-control" name='bno' th:value="${board.bno}" readonly="readonly">
                             </div>
@@ -419,8 +422,13 @@
                 if(operation=='remove'){
                     formObj.attr("action","/board/remove");
                 } else if (operation == 'list'){
-                    formObj.attr("action", "/board/list").submit("method","get");
+                    formObj.attr("action", "/board/list").attr("method","get");
+                    var pageNumTag = $("input[name='pageNum']").clone();
+                    var amountTag = $("input[name='amount']").clone();
+
                     formObj.empty();
+                    formObj.append(pageNumTag);
+                    formObj.append(amountTag);
                 }
 
                 formObj.submit();
