--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -385,6 +385,8 @@
                                 <input type="hidden" id="bno" name="bno" th:value="${board.bno}">
                                 <input type="hidden" name="pageNum" th:value="${cri.pageNum}">
                                 <input type="hidden" name="amount" th:value="${cri.amount}">
+                                <input type="hidden" name="keyword" th:value="${cri.keyword}">
+                                <input type="hidden" name="type" th:value="${cri.type}">
                             </form>
 
                         </div>
