--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -387,6 +387,28 @@
                                 </tbody>
                             </table>
                             <!-- /.table-responsive -->
+
+                            <div class='row'>
+                                <div class='col-lg-12'>
+                                    <form id='searchForm' action="/board/list" method='get'>
+                                        <select name='type'>
+                                            <option value="" th:selected="${pageMaker.cri.type == null}">--</option>
+                                            <option value="T" th:selected="${pageMaker.cri.type == 'T'}">제목</option>
+                                            <option value="C" th:selected="${pageMaker.cri.type == 'C'}">내용</option>
+                                            <option value="W" th:selected="${pageMaker.cri.type == 'W'}">작성자</option>
+                                            <option value="TC" th:selected="${pageMaker.cri.type == 'TC'}">제목 or 내용</option>
+                                            <option value="TW" th:selected="${pageMaker.cri.type == 'TW'}">제목 or 작성자</option>
+                                            <option value="TWC" th:selected="${pageMaker.cri.type == 'TWC'}">제목 or 내용 or 작성자</option>
+                                        </select>
+                                        <input type='text' name='keyword' th:value='${pageMaker.cri.keyword }'/>
+                                        <input type='hidden' name='pageNum' th:value='${pageMaker.cri.pageNum }'>
+                                        <input type='hidden' name='amount' th:value='${pageMaker.cri.amount }'>
+                                        <button class='btn btn-default'>Search</button>
+                                    </form>
+                                </div>
+                            </div>
+
+
                             <div class='pull-right'>
                                 <ul class="pagination">
 
@@ -397,9 +419,12 @@
                                 </ul>
                             </div>
 
+
                             <form id="actionForm" action="/board/list" method="get">
                                 <input type="hidden" name="pageNum" th:value="${pageMaker.cri.pageNum}">
                                 <input type="hidden" name="amount" th:value="${pageMaker.cri.amount}">
+                                <input type="hidden" name="type" th:value="${pageMaker.cri.type}">
+                                <input type="hidden" name="keyword" th:value="${pageMaker.cri.keyword}">
                             </form>
 
 
@@ -486,6 +511,29 @@
                 actionForm.append("<input type='hidden' name='bno' value='"+$(this).attr("href")+"'>");
                 actionForm.attr("action", "/board/get");
                 actionForm.submit();
+            })
+
+            var searchForm=$("#searchForm");
+
+            $("#searchForm button").on("click", function(e){
+
+                if(!searchForm.find("option:selected").val()){
+                    alert("검색종류를 선택하세요");
+                    return false;
+                }
+
+                if(!searchForm.find("input[name=='keyword']").val()){
+                    alert("키워드를 입력하세요");
+                    return false;
+                }
+
+                searchForm.find("input[name='pageName]").val("1");
+                e.preventDefault();
+
+                searchForm.submit();
+
+
+
             })
 
 
