--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -364,6 +364,8 @@
                             <form role="form" action="/board/modify" method="post">
                                 <input type="hidden" name="pageNum" th:value="${cri.pageNum}">
                                 <input type="hidden" name="amount" th:value="${cri.amount}">
+                                <input type="hidden" name="type" th:value="${cri.type}">
+                                <input type="hidden" name="keyword" th:value="${cri.keyword}">
 
                             <div class="form-group">
                                 <label>Bno</label> <input class="form-control" name='bno' th:value="${board.bno}" readonly="readonly">
@@ -425,10 +427,14 @@
                     formObj.attr("action", "/board/list").attr("method","get");
                     var pageNumTag = $("input[name='pageNum']").clone();
                     var amountTag = $("input[name='amount']").clone();
+                    var keywordTag = $("input[name='keyword']").clone();
+                    var typeTag = $("input[name='type']").clone();
 
                     formObj.empty();
                     formObj.append(pageNumTag);
                     formObj.append(amountTag);
+                    formObj.append(keywordTag);
+                    formObj.append(typeTag);
                 }
 
                 formObj.submit();
