--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -408,14 +408,21 @@
         /* <![CDATA[ */
         console.log("JS TEST")
 
-        var bnoValue=/*[[${board}]]*/;
+        var getboard=/*[[${board.bno}]]*/;
 
-        replyService().add(
-            {reply:"JS TEST", replyer:"tester", board:bnoValue},
+        /*replyService().add(
+            {reply:"JS TEST", replyer:"tester", board:getboard},
             function (result){
                 alert("RESULT: "+result);
             }
-        );
+        );*/
+
+        replyService().getList({bno:getboard, page:1}, function(list){
+
+            for(var i=0, len=list.length||0; i<len; i++){
+                console(list[i]);
+            }
+        });
         /* ]]> */
     </script>
 
