--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -408,22 +408,42 @@
         /* <![CDATA[ */
         console.log("JS TEST")
 
-        var getboard=/*[[${board.bno}]]*/;
+        var getbno=/*[[${board.bno}]]*/;
+        var getboard=/*[[${board}]]*/;
 
-        /*replyService().add(
+        replyService().add(
             {reply:"JS TEST", replyer:"tester", board:getboard},
             function (result){
                 alert("RESULT: "+result);
             }
-        );*/
+        );
 
 
-        replyService.getList({page:1, bno:getboard}, function(list){
+        replyService.getList({page:1, bno:getbno}, function(list){
 
             for(var i=0, len=list.length||0; i<len; i++){
                 console.log(list[i]);
             }
         });
+
+        replyService.remove(1, function (count){
+            console.log(count);
+
+            if(count=="success"){
+                alert("REMOVED");
+            }
+        }, function(err){
+            alert('ERROR...');
+        });
+
+        replyService.update({
+            rno:1,
+            reply : "modified reply..",
+            replyer : "modified replyers."
+        }, function (result){
+            alert("수정 완료...");
+        });
+
         /* ]]> */
     </script>
 
