--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -397,13 +397,79 @@
                 <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
+
+            <div class='row'>
+                <div class="col-lg-12">
+                    <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-comments fa-fw"></i> Reply
+                        </div>
+
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <ul class="chat">
+                                <!-- start reply -->
+                                <li class="left clearfix" data-rno='12'>
+                                    <div>
+                                        <div class="header">
+                                            <strong class="primary-font">user00</strong>
+                                            <small class="pull-right text-muted">2020-01-01 11:11</small>
+                                        </div>
+                                        <p>Good Job!</p>
+                                    </div>
+                                </li>
+                                <!-- end reply -->
+                            </ul>
+                            <!-- ./ end ul -->
+                        </div>
+                        <!--/.panel .chat-panel -->
+                    </div>
+
+                </div>
+                <!-- ./ end row -->
+            </div>
+
         </div>
         <!-- /#page-wrapper -->
 
     </div>
     <!-- /#wrapper -->
 
+
     <script type="text/javascript" src="/js/reply.js"></script>
+
+    <script th:inline="javascript">
+        /* <![CDATA[ */
+        $(document).ready(function(){
+
+            var bnoValue=/*[[${board.bno}]]*/;
+            var replyUL=$(".chat");
+
+            showList(1);
+
+            function showList(page){
+
+                replyService.getList({bno:bnoValue, page: page||1}, function(list){
+
+                    var str = "";
+                    if (list == null || list.length == 0) {
+                        replyUL.html("");
+                        return;
+                    }
+
+                    for (var i = 0, len = list.length || 0; i < len; i++) {
+
+                        str+="<li class='left clearfix' data-rno='"+list[i].rno+"'>";
+                        str+="<div><div class='header'><strong class='privmary-font'>"+list[i].replyer+"</strong>";
+                    }
+                })
+            }
+        })
+
+        /* ]]> */
+    </script>
+
     <script th:inline="javascript">
         /* <![CDATA[ */
         console.log("JS TEST")
