--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -404,6 +404,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-comments fa-fw"></i> Reply
+                            <button id="addReplyBtn" class="btn btn-primary btn-xs pull-right">New Reply</button>
                         </div>
 
                         <!-- /.panel-heading -->
@@ -436,6 +437,43 @@
     </div>
     <!-- /#wrapper -->
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+         aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">REPLY MODAL</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label>Reply</label>
+                        <input class="form-control" name='reply' value='New Reply!!!'>
+                    </div>
+                    <div class="form-group">
+                        <label>Replyer</label>
+                        <input class="form-control" name='replyer' value='replyer'>
+                    </div>
+                    <div class="form-group">
+                        <label>Reply Date</label>
+                        <input class="form-control" name='replyDate' value=''>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="modalModBtn" type="button" class="btn btn-warning">Modify</button>
+                    <button id="modalRemoveBtn" type="button" class="btn btn-danger">Remove</button>
+                    <button id="modalRegisterBtn" type="button" class="btn btn-primary">Register</button>
+                    <button id="modalCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
 
     <script type="text/javascript" src="/js/reply.js"></script>
 
@@ -444,6 +482,7 @@
         $(document).ready(function(){
 
             var bnoValue=/*[[${board.bno}]]*/;
+            var getBoard=/*[[${board}]]*/;
             var replyUL=$(".chat");
 
             showList(1);
@@ -462,23 +501,79 @@
 
                         str+="<li class='left clearfix' data-rno='"+list[i].rno+"'>";
                         str+="<div><div class='header'><strong class='privmary-font'>"+list[i].replyer+"</strong>";
+                        str+="<small class='pull-right text-muted'>"+replyService.displayTime(list[i].modifiedDate)+"</small></div>";
+                        str+="<p>"+list[i].reply+"</p></div></li>";
                     }
-                })
+
+                    replyUL.html(str);
+                });
             }
-        })
+
+            var modal = $(".modal");
+            var modalInputReply = modal.find("input[name='reply']");
+            var modalInputReplyer = modal.find("input[name='replyer']");
+            var modalInputReplyDate = modal.find("input[name='replyDate']");
+
+            var modalModBtn = $("#modalModBtn");
+            var modalRemoveBtn = $("#modalRemoveBtn");
+            var modalRegisterBtn = $("#modalRegisterBtn");
+
+            $("#addReplyBtn").on("click", function (e){
+
+                modal.find("input").val("");
+                modalInputReplyDate.closest("div").hide();
+                modal.find("button[id != 'modalCloseBtn']").hide();
+
+                modalRegisterBtn.show();
+
+                $(".modal").modal("show");
+            });
+
+            modalRegisterBtn.on("click", function (e){
+
+                var reply={
+                    reply:modalInputReply.val(),
+                    replyer:modalInputReplyer.val(),
+                    board:getBoard
+                };
+
+                replyService.add(reply, function(result){
+
+                    alert(result);
+
+                    modal.find("input").val("");
+                    modal.modal("hide");
+
+                    showList(1);
+                });
+            })
+
+        });
 
         /* ]]> */
     </script>
 
-    <script th:inline="javascript">
+    <!--<script th:inline="javascript">
         /* <![CDATA[ */
         console.log("JS TEST")
 
         var getbno=/*[[${board.bno}]]*/;
         var getboard=/*[[${board}]]*/;
 
-        replyService().add(
+        replyService.add(
             {reply:"JS TEST", replyer:"tester", board:getboard},
+            function (result){
+                alert("RESULT: "+result);
+            }
+        );
+        replyService.add(
+            {reply:"JS TEST", replyer:"tester1", board:getboard},
+            function (result){
+                alert("RESULT: "+result);
+            }
+        );
+        replyService.add(
+            {reply:"JS TEST", replyer:"tester2", board:getboard},
             function (result){
                 alert("RESULT: "+result);
             }
@@ -491,7 +586,6 @@
                 console.log(list[i]);
             }
         });
-
         replyService.remove(1, function (count){
             console.log(count);
 
@@ -511,6 +605,13 @@
         });
 
         /* ]]> */
+    </script>-->
+
+    <script type="text/javascript">
+        $(document).ready(function (){
+
+
+        });
     </script>
 
     <script type="text/javascript">
