--- a/src/main/resources/templates/get.html
+++ b/src/main/resources/templates/get.html
@@ -411,20 +411,15 @@
                         <div class="panel-body">
                             <ul class="chat">
                                 <!-- start reply -->
-                                <li class="left clearfix" data-rno='12'>
-                                    <div>
-                                        <div class="header">
-                                            <strong class="primary-font">user00</strong>
-                                            <small class="pull-right text-muted">2020-01-01 11:11</small>
-                                        </div>
-                                        <p>Good Job!</p>
-                                    </div>
-                                </li>
+
                                 <!-- end reply -->
                             </ul>
                             <!-- ./ end ul -->
                         </div>
                         <!--/.panel .chat-panel -->
+                        <div class="panel-footer">
+
+                        </div>
                     </div>
 
                 </div>
@@ -477,6 +472,24 @@
 
     <script type="text/javascript" src="/js/reply.js"></script>
 
+    <!--<script th:inline="javascript">
+        /* <![CDATA[ */
+        $(document).ready(function (){
+            var getboard=/*[[${board}]]*/;
+
+            for(var i=1; i<=304; i++) {
+                replyService.add(
+                    {reply: "JS TEST"+i, replyer: "tester"+i, board: getboard},
+                    function (result) {
+                        alert("RESULT: " + result);
+                    }
+                );
+            }
+
+        });
+        /* ]]> */
+    </script>-->
+
     <script th:inline="javascript">
         /* <![CDATA[ */
         $(document).ready(function(){
@@ -489,8 +502,14 @@
 
             function showList(page){
 
-                replyService.getList({bno:bnoValue, page: page||1}, function(list){
+                replyService.getList({bno:bnoValue, page: page||1}, function(replyCnt, list){
 
+                    if (page == -1) {
+
+                        pageNum = Math.ceil(replyCnt / 10.0);
+                        showList(pageNum);
+                        return;
+                    }
                     var str = "";
                     if (list == null || list.length == 0) {
                         replyUL.html("");
@@ -506,6 +525,8 @@
                     }
 
                     replyUL.html(str);
+
+                    showReplyPage(replyCnt);
                 });
             }
 
@@ -544,8 +565,106 @@
                     modal.find("input").val("");
                     modal.modal("hide");
 
-                    showList(1);
+                    showList(-1);
                 });
+            });
+
+            $(".chat").on("click","li",function (e){
+
+                var rno = $(this).data("rno");
+
+                replyService.get(rno, function (reply) {
+
+                    modalInputReply.val(reply.reply);
+                    modalInputReplyer.val(reply.replyer);
+                    modalInputReplyDate.val(replyService.displayTime(reply.modifiedDate)).attr("readonly", "readonly");
+                    modal.data("rno", reply.rno);
+
+                    modal.find("button[id!='modalCloseBtn']").hide();
+                    modalModBtn.show();
+                    modalRemoveBtn.show();
+
+                    $(".modal").modal("show");
+                });
+            });
+
+            modalModBtn.on("click",function (e){
+
+                var reply={rno:modal.data("rno"), reply:modalInputReply.val(), replyer:modalInputReplyer.val()};
+
+                replyService.update(reply, function (result){
+                    alert(result);
+                    modal.modal("hide");
+                    showList(pageNum);
+                });
+            });
+
+            modalRemoveBtn.on("click", function (e){
+
+                var rno=modal.data("rno");
+
+                replyService.remove(rno, function (result){
+
+                    alert(result);
+                    modal.modal("hide");
+                    showList(pageNum);
+                });
+            });
+
+            var pageNum=1;
+            var replyPageFooter=$(".panel-footer");
+
+            function showReplyPage(replyCnt){
+
+                var endNum=Math.ceil(pageNum/10.0)*10;
+                var startNum=endNum-9;
+
+                var prev=startNum!=1;
+                var next=false;
+
+                if(endNum*10>=replyCnt){
+                    endNum=Math.ceil(replyCnt/10.0);
+                }
+
+                if (endNum * 10 < replyCnt) {
+                    next=true;
+                }
+
+                var str="<ul class='pagination pull-right'>";
+
+                if(prev){
+                    str+="<li class='page-item'><a class='page-link' href='"+(startNum-1)+"'>Previous</a></li>";
+                }
+
+                for (var i = startNum; i <= endNum; i++) {
+
+                    var active = pageNum == i?"active":"";
+
+                    str+="<li class='page-item "+active+" '><a class='page-link' href='"+i+"'>"+i+"</a></li>";
+                }
+
+                if(next){
+
+                    str+="<li class='page-item'><a class='page-link' href='"+(endNum+1)+"'>Next</a></li>";
+                }
+
+                str+="</ul></div>"
+
+                console.log(str)
+
+                replyPageFooter.html(str);
+            }
+
+            replyPageFooter.on("click", "li a", function (e){
+
+                e.preventDefault();
+                console.log("page click");
+
+                var targetPageNum = $(this).attr("href");
+
+                pageNum=targetPageNum;
+
+                showList(pageNum);
             })
 
         });
@@ -606,13 +725,6 @@
 
         /* ]]> */
     </script>-->
-
-    <script type="text/javascript">
-        $(document).ready(function (){
-
-
-        });
-    </script>
 
     <script type="text/javascript">
         $(document).ready(function (){
