--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@
                                     <input class="form-control" placeholder="userid" name="username" type="text" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="userpw" type="password" value="">
+                                    <input class="form-control" placeholder="Password" name="userpw" type="password">
                                 </div>
                                 <div class="checkbox">
                                     <label>
@@ -58,7 +58,7 @@
                                 <!-- Change this to a button or input when using this as a form -->
                                 <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
-<!--                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />-->
+                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                         </form>
                     </div>
                 </div>
