--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -42,13 +42,13 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" method="post" action="/login">
+                        <form role="form" method="post" th:action="@{/user/login}">
                             <fieldset>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="userid" name="username" type="text" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="userpw" type="password">
+                                    <input class="form-control" placeholder="Password" name="password" type="password">
                                 </div>
                                 <div class="checkbox">
                                     <label>
@@ -58,7 +58,7 @@
                                 <!-- Change this to a button or input when using this as a form -->
                                 <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
-                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+<!--                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
                         </form>
                     </div>
                 </div>
