--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -373,7 +373,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label>Writer</label> <input class="form-control" name='writer' value='<sec:authentication="principal.username"/>' readonly="readonly">
+                                    <label>Writer</label> <input class="form-control" name='writer' th:value="${#authentication.principal.username}" readonly="readonly">
                                 </div>
                                 <button type="submit" class="btn btn-default">Submit
                                     Button</button>
